edited title and added a paragraph

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>TypeScript</title>
-        <link rel="stylesheet" href="./style.css">
+        <title>Git VCS</title>
+        <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
         <h1>Hello World</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. At officia
+            laudantium modi tenetur, incidunt magni corporis ducimus enim
+            doloremque nobis, aut molestiae voluptas error minima impedit fugit
+            illum cumque magnam?
+        </p>
     </body>
 </html>
